# Team_17

./: .gitignore  Allele.hpp  CMakeLists.txt  CMakeLists.txt~  CMakeLists1.txt  Doxyfile.in  Population.hpp  Random.cpp  Simulation.cpp  Simulation.hpp  main.cpp  migration.cpp  population.cpp  population.hpp  test.cpp
data/: mitogenes.fa  output_N4_T100_A4_F01010305.txt  output_testfa_N2_T100_m248.txt  test.fa
share/doc/tclap/html/: ArgException_8h.html  ArgException_8h_source.html  ArgTraits_8h.html  ArgTraits_8h_source.html  CmdLineInterface_8h.html  (+105 more)
source/: Allele.cpp  Allele.hpp  FitnessConstraint.h  Population.cpp  Population.hpp  Random.cpp  Random.hpp  Simulation.cpp  Simulation.hpp  VectorFrequenciesConstraint.h  allele.hpp  main.cpp  rosettacode.cpp  sequence.fasta
tclap/: Makefile  config.status  tclap.pc
tclap/config/: Makefile
tclap/docs/: Makefile
tclap/docs/html/: Arg_8h.html  Arg_8h_source.html  CmdLineInterface_8h_source.html  CmdLineOutput_8h.html  CmdLine_8h_source.html  Constraint_8h_source.html  DocBookOutput_8h.html  DocBookOutput_8h_source.html  HelpVisitor_8h.html  IgnoreRestVisitor_8h_source.html  MultiArg_8h.html  MultiSwitchArg_8h_source.html  OptionalUnlabeledTracker_8h.html  StdOutput_8h.html  StdOutput_8h_source.html  SwitchArg_8h_source.html  UnlabeledMultiArg_8h.html  UnlabeledValueArg_8h_source.html  ValueArg_8h_source.html  ValuesConstraint_8h.html  Visitor_8h.html  Visitor_8h_source.html  classTCLAP_1_1ArgException.html  classTCLAP_1_1ArgParseException.html  classTCLAP_1_1CmdLine-members.html  classTCLAP_1_1CmdLine.html  classTCLAP_1_1CmdLineInterface-members.html  classTCLAP_1_1CmdLineOutput.html  classTCLAP_1_1DocBookOutput-members.html  classTCLAP_1_1ExitException-members.html  classTCLAP_1_1IgnoreRestVisitor-members.html  classTCLAP_1_1IgnoreRestVisitor.html  classTCLAP_1_1MultiArg.html  classTCLAP_1_1MultiSwitchArg-members.html  classTCLAP_1_1SpecificationException-members.html  classTCLAP_1_1SwitchArg.html  classTCLAP_1_1UnlabeledMultiArg-members.html  classTCLAP_1_1UnlabeledMultiArg.html  classTCLAP_1_1UnlabeledValueArg-members.html  classTCLAP_1_1ValueArg.html  (+55 more)
tclap/examples/: Makefile  test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test20  test21  test3  test4  test5  test6  test7  test8  test9
tclap/include/: Makefile
tclap/include/tclap/: Makefile
tclap/msc/: Makefile
tclap/msc/examples/: Makefile
tclap/tests/: Makefile
test/: test.cpp
